--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    background: linear-gradient(-45deg, #fcba03, #f73105, #0572f7, #05f746);
+    animation: gradient 15s ease infinite;
     font-family: 'Acme', sans-serif;
     font-size: 24px;
     
@@ -21,8 +23,7 @@ body {
 
 .block {
     position: absolute;
-    background: linear-gradient(-45deg, #fcba03, #f73105, #0572f7, #05f746);
-    animation: gradient 15s ease infinite;
+    background: black;
     left: 40px;
     width: 80px;
     height: 80px;
